# agent-your-agent

./: .gitignore  CLAUDE.md  README.md  README_CN.md  install.sh  pyproject.toml
.claude/skills/: aya.md
docs/: api-reference.md  architecture.md  getting-started.md  model-routing.md
githooks/: pre-push
src/aya/: hooks.py  memory.py  models.py  workspace.py
src/hive/: models.py  workspace.py
tests/: test_communication.py  test_hooks.py  test_memory.py  test_models.py  test_routing.py  test_spawn.py  test_workspace.py
